fixed word wrap for long tweets

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -32,3 +32,6 @@ p.tweet-text {
    right: -300px;
 }
 
+.error {
+    display: none;
+}
